# swimmobility

./: .gitignore  LICENSE  README.md  pyproject.toml
out_test/: run_metadata.json
src/swimmobility/: cli.py  config.py
src/swimmobility.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/swimmobility/detection/: immobility.py
src/swimmobility/gui/: roi_draw.py
src/swimmobility/io/: outputs.py  schemas.py
src/swimmobility/plot/: summary_figure.py
src/swimmobility/video/: motion.py  reader.py
tests/: test_immobility.py  test_motion.py
