[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swimmobility"
version = "0.0.1"
description = "Deterministic forced-swim immobility bout detection from video (no ML)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jordan Vasu"}]
dependencies = ["numpy>=1.24", "pandas>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
video = ["opencv-python>=4.8"]
signal = ["scipy>=1.10"]
plot = ["matplotlib>=3.7"]

[project.scripts]
swimmobility = "swimmobility.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
